# maga

./: .gitignore  README.md  pyproject.toml
examples/: maga_demonstration.py  multiplecoils.py  test_3d_visualization.py
src/maga/: __init__.py
src/maga/core/: __init__.py  device_manager.py  field_calculator.py  grid.py  kernels.py
src/maga/geometry/: __init__.py  base.py  chopped_beam.py  circular_coil.py  coil_pairs.py  oscillating_beam.py  oscillating_beam_2d.py  rectangular_coil.py
tests/: test_basic_functionality.py  test_time_dependent_beam_harmonics.py  test_time_dependent_beam_harmonics_2d.py  test_time_dependent_beam_harmonics_chopped.py  test_time_dependent_beam_harmonics_chopped_2d.py  test_time_dependent_beam_visualization.py  test_time_dependent_beam_visualization_chopped.py  test_time_dependent_circbeam_harmonics.py  test_time_dependent_circbeam_harmonics_2d.py  test_time_dependent_circbeam_visualization.py
verification/: 001_single_coil_z.py  002_helmholtz.py  README.md
verification/res/: helmholtz.md  sc.md
